--- a/stefan-wolpers.html
+++ b/stefan-wolpers.html
@@ -180,7 +180,7 @@
 
     <section class="page-title" style="background-image:url(images/main-slider/scrum-pages-2.png);">
         <div class="auto-container">
-            <h1>Gunther Verheyen</h1>
+            <h1>Stefan Wolpers</h1>
             <ul class="bread-crumb clearfix">
                 <li><a href="index.html">Home</a></li>
                 <li><a href="speakers.html">Speakers</a></li>
@@ -195,11 +195,13 @@
             <div class="row">
                 <div class="image-column col-lg-4 col-md-12 col-sm-12">
                     <div class="image-box">
-                        <figure class="image"><img src="images/speaker/Gunther-Verheyen.png" alt=""></figure>
+                        <figure class="image"><img src="images/speaker/Stefan-Wolpers.jpg" alt=""></figure>
                         <ul class="social-icon-two social-icon-colored text-center">
 
-								<li><a href="https://twitter.com/Ullizee"><i class="fab fa-twitter"></i></a></li>
-                                <li><a href="https://www.linkedin.com/in/ullizee/"><i class="fab fa-linkedin"></i></a></li>
+							   <li><a href="https://twitter.com/ageofproduct"><i class="fab fa-twitter"></i></a></li>
+                               <li><a href="https://www.linkedin.com/in/stefanwolpers/"><i class="fab fa-linkedin"></i></a></li>
+							   <li><a href="https://berlin-product-people.com/"><i class="fab fa fa-globe"></i></a></li>
+							   <li><a href="https://age-of-product.com/"><i class="fab fa fa-blog"></i></a></li>
                             
                         </ul>
                     </div>
@@ -208,14 +210,12 @@
                 <div class="info-column col-lg-8 col-md-12 col-sm-12">
                     <div class="inner-column">
                         <div class="text-box">
-                            <h3>Gunther Verheyen</h3>
-                            <p>Gunther Verheyen is an independent Scrum Caretaker on a journey of humanizing the workplace with Scrum. He thinks, reflects, wonders, and wanders. He teaches, assists, serves, advices, and suggests. He works with teams, individuals, and executives. He facilitates learning and unlearning. His services build on more than 15 years’ worth of experience, ideas, beliefs, and observations of Scrum.<br><br>
-							Gunther ventured into IT and software development after graduating in 1992. His Agile adventures started with eXtreme Programming and Scrum in 2003. Years of dedication followed, spent on employing Scrum in diverse circumstances with various teams. In 2010 Gunther became the inspiring force behind some large-scale enterprise transformations. In 2011 he became a Professional Scrum Trainer with Scrum.org.<br><br>
-							Gunther left consulting in 2013 to found Ullizee-Inc and partner exclusively with Ken Schwaber, Scrum co-creator. He represented Ken and the Scrum.org organization in Europe, shepherded the “Professional Scrum” series, and guided Scrum.org’s global network of Professional Scrum Trainers. Gunther co-created Agility Path, EBM (Evidence-Based Management), and the Nexus framework for Scaled Professional Scrum.<br><br>
-							In 2016 Gunther definitely embarked on his journey to humanize the workplace as an independent Scrum Caretaker — a connector, teacher, writer, speaker. Gunther frequently helps organizations re-imagine their Scrum to create a more humane, a more Agile and thereby a more productive environment.<br><br>
-							Gunther is the author of the acclaimed books Scrum – A Pocket Guide (Van Haren Publishing, 2013-2019) and 97 Things every Scrum practitioner should know (O’Reilly Media, 2020). Ken Schwaber recommends Gunther’s pocket guide to Scrum as “…the best description of Scrum currently available” and “extraordinarily competent”. Several translations of his work are available.<br><br>
-							When not travelling for Scrum and humanizing the workplace, Gunther lives and works in Antwerp, Belgium. More at https://guntherverheyen.com/about</p>
-                            <h4>Sessions by Gunther</h4>
+                            <h3>Stefan Wolpers</h3>
+                            <p>WHAT I DO: I help companies to transition to agile product development methodologies by coaching teams hands-on.</p>
+							<p>WHO I WORK WITH: I work both with fast-growing startups as well as enterprise organizations.</p>
+							<p>WHY IT WORKS: When you partner with Berlin Product People you will immediately benefit from our long-standing experience with agile frameworks, such as Scrum, Kanban, Lean UX and Lean Startup.</p>
+							<p>WHAT MAKES ME DIFFERENT: 10+ years of software development experience based on agile frameworks have taught me a lot of the best practices for effective agile transitions. I have also learned—often the hard way—what is not working. Creating in your organization a culture that embraces learning and experimentation to build product customers love hence does not require to reinvent the proverbial wheel.</p>
+                            <h4>Sessions by Stefan</h4>
 							<div class="row">
                                 <div class="col-lg-4">
                                     <div class="speaker-session-info">
