--- a/speakers.html
+++ b/speakers.html
@@ -282,6 +282,51 @@
         </div>
     </section>
     <!-- End Speakers Section -->
+	
+	
+	   <!-- Speakers Section 2 -->
+    <section class="speakers-section-three">
+        <div class="auto-container">
+            <div class="row">
+			
+			
+			<!-- Speaker Block -->
+             
+                <div class="speaker-block-three col-xl-3 col-lg-4 col-md-6 col-sm-12 wow fadeInUp">
+                    <div class="inner-box">
+                        <div class="image-box">
+                          <figure class="image"><a href="stefan-wolpers.html"><img src="images/speaker/stefan-wolpers.jpg" alt=""></a></figure> 
+						</div>
+					<div class="info-box">
+						<h4 class="name"><a href="stefan-wolpers.html">Stefan Wolpers</a></h4>
+                            <span class="designation">PST, Agile Coach & Scrum Master<br>Berlin Product People GmbH</span>
+                        </div>
+					<div class="social-box">                            
+						<ul class="social-links social-icon-colored">
+							   <li><a href="https://twitter.com/ageofproduct"><i class="fab fa-twitter"></i></a></li>
+                               <li><a href="https://www.linkedin.com/in/stefanwolpers/"><i class="fab fa-linkedin"></i></a></li>
+							   <li><a href="https://berlin-product-people.com/"><i class="fab fa fa-globe"></i></a></li>
+							   <li><a href="https://age-of-product.com/"><i class="fab fa fa-blog"></i></a></li>
+                        </ul>
+				</div>
+			   </div>
+              </div>
+
+
+
+  
+  
+  
+  
+  
+            </div>
+        </div>
+    </section>
+    <!-- End Speakers Section -->
+	
+	
+	
+	
 
 <!-- Main Footer -->
 
