--- a/index.html
+++ b/index.html
@@ -334,7 +334,7 @@
 			
 			
                     <div class="image-box">
-                        <figure class="image"><a href="stefan-wolpers.html"><img src="images/speaker/stefan-wolpers.jpg" alt=""></a></figure> 
+                        <figure class="image"><a href="stefan-wolpers.html"><img src="images/speaker/Stefan-Wolpers.png" alt=""></a></figure> 
         </div>
 					<div class="social-box">                            
 						<ul class="social-links social-icon-colored">
