--- a/stefan-wolpers.html
+++ b/stefan-wolpers.html
@@ -195,7 +195,7 @@
             <div class="row">
                 <div class="image-column col-lg-4 col-md-12 col-sm-12">
                     <div class="image-box">
-                        <figure class="image"><img src="images/speaker/Stefan-Wolpers.jpg" alt=""></figure>
+                        <figure class="image"><img src="images/speaker/Stefan-Wolpers.png" alt=""></figure>
                         <ul class="social-icon-two social-icon-colored text-center">
 
 							   <li><a href="https://twitter.com/ageofproduct"><i class="fab fa-twitter"></i></a></li>
