--- a/index.html
+++ b/index.html
@@ -1079,6 +1079,78 @@
 
 <!-- End Footer -->
 
+
+<style>
+	        #cookieConsent {
+    background-color: rgba(20,20,20,0.8);
+    min-height: 26px;
+    font-size: 14px;
+    color: #ccc;
+    line-height: 26px;
+    padding: 8px 0 8px 30px;
+    font-family: "Trebuchet MS",Helvetica,sans-serif;
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    display: none;
+    z-index: 9999;
+}
+#cookieConsent a {
+    color: #4B8EE7;
+    text-decoration: none;
+}
+#closeCookieConsent {
+    float: right;
+    display: inline-block;
+    cursor: pointer;
+    height: 20px;
+    width: 20px;
+    margin: -15px 0 0 0;
+    font-weight: bold;
+}
+#closeCookieConsent:hover {
+    color: #FFF;
+}
+#cookieConsent a.cookieConsentOK {
+    background-color: #F1D600;
+    color: #000;
+    display: inline-block;
+    border-radius: 5px;
+    padding: 0 20px;
+    cursor: pointer;
+    float: right;
+    margin: 0 60px 0 10px;
+}
+#cookieConsent a.cookieConsentOK:hover {
+    background-color: #E0C91F;
+}
+	    </style>
+
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+<script>
+    $(document).ready(function(){   
+    setTimeout(function () {
+        $("#cookieConsent").fadeIn(200);
+     }, 1000);
+    $("#closeCookieConsent, .cookieConsentOK").click(function() {
+        $("#cookieConsent").fadeOut(200);
+    }); 
+}); 
+</script>
+
+<div id="cookieConsent">
+<div id="closeCookieConsent"><b style="font-size:22px";><mark>x</mark></b></div>
+This website stores cookies on your computer. These cookies are used to improve your website and provide more personalized services to you, both on this website and through other media.To find out more about the cookies we use, see our. <a href="https://scrumdaybangalore.org/privacy-policy-xebia-group.pdf" target="_blank">Privacy Policy</a>.<br> 
+We won't track your information when you decline. But in order to comply with your preferences, we'll have to use just one tiny cookie so that you're not asked to make this choice again.
+                                             
+<a class="cookieConsentOK">Accept</a>										
+</div>
+
+
+
+
+
 		</div>
 
 <!--End pagewrapper-->
