--- a/buy-ticket.html
+++ b/buy-ticket.html
@@ -258,7 +258,7 @@
 
                             <div class="btn-box">
 
-                                <a href="http://bit.ly/sdbindiaeb" class="theme-btn btn-style-one"><span class="btn-title">GET TICKET</span></a>
+                                <a href="http://bit.ly/sdbindiaeb" class="theme-btn btn-style-one"><span class="btn-title">BUY TICKETS</span></a>
 
                             </div>
 
@@ -303,7 +303,25 @@
 
                             <div class="btn-box">
 
-                                <a href="http://bit.ly/sdbin" class="theme-btn btn-style-one"><span class="btn-title">BUY TICKET</span></a>
+                                <a href="#" class="theme-btn btn-style-one"><span class="btn-title"><!-- Noscript content for added SEO -->
+								<noscript><a href="https://scrumdaybangalore2021.eventbrite.com" rel="noopener noreferrer" target="_blank"></noscript>
+								<button id="eventbrite-widget-modal-trigger-140073179651" type="button" style=" background: #ec167f; color: white; border: 0;" >BUY TICKETS</button>
+								<script src="https://www.eventbrite.com/static/widgets/eb_widgets.js"></script>
+<script type="text/javascript">
+    var exampleCallback = function() {
+        console.log('Order complete!');
+    };
+
+ 
+
+    window.EBWidgets.createWidget({
+        widgetType: 'checkout',
+        eventId: '140073179651',
+        modal: true,
+        modalTriggerElementId: 'eventbrite-widget-modal-trigger-140073179651',
+        onOrderComplete: exampleCallback
+    });
+</script></span></a>
 
                             </div>
 
