--- a/schedule.html
+++ b/schedule.html
@@ -352,8 +352,17 @@
                                             <h5 class="name">Chandan Lal Patary</h5>
 											
 											<span class="designation">Enterprise Agile Transformation <br>Samsung Electronics</span>
-
-                                        </div>
+												<h4><a href="event-detail.html">Descaling Organizational Complexity to Expedite Product Delivery</a></h4>
+												<div class="text"> As an Organization we are inquiring, are we prepared to endure up with the speed which the market is calling for?<br><br>
+												Are we competent to grapple up with the speed at which competitor is able to seize the market?<br><br>
+												What is wrong with our speed?<br><br>
+												We were market leaders once, but what is taking place and what will crop up in the future?<br><br>
+												Most of the leaders are seeking these questions among themselves and building strategies to fixate on for the survival traits or win back the market leadership with Radical innovation.<br><br>
+												Most of the enterprise has evolved to develop into a heavily stable hierarchical structure, now modern organizations demand agility with stability.<br><br>
+												Achieving both requires considerable reforms to be accomplished in Culture, Structure, People, Process, and tools. How fast can we bring those revolutions, do we have the capacity and capability to carry on those changes? If not, what will happen to the Product delivery speed and market penetration?<br>
+												Can we establish Organization as a machine to Organization as an Organism?<br><br>
+												Let us talk about a few of these factors to work upon and enable an organization to thrive with agility.</div>
+                                            </div>
 
 									</div>
 
@@ -382,9 +391,31 @@
 											<span class="designation">Head of Product<br>Xebia Academy</span>
 
                                         </div>
+									</div><br>
+	
 
-									</div>
-
+<style>
+.container {
+  height: 50px;
+  position: relative;
+}
+.center {
+  margin: 0;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -ms-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
+}
+</style>
+<div class="container">
+  <div class="center">
+    <button>							<div class="btn-box" color="#f20487">
+                            <a href="schedule.html" class="theme-btn btn-style-one"><span class="btn-title">Download Complete Schedule</span></a>
+                            </div></button>
+  </div>
+</div>						
+									
                                 </div>
 
                             </div>	
