--- a/index.html
+++ b/index.html
@@ -352,21 +352,14 @@
 
                         <div class="info-box">
 							<h4 class="name"><a href="speakers/stefan-wolpers">Maarten Dalmijin</a></h4>
-                            <span class="designation">PST, Agile Coach & Scrum Master<br>Berlin Product People GmbH</span>
+                            
 			</div>
 			
 			
                     <div class="image-box">
-                        <figure class="image"><a href="stefan-wolpers.html"><img src="images/speaker/Maarten.jpg" alt=""></a></figure> 
+                        <figure class="image"><a href="maarten-dalmijin.html"><img src="images/speaker/Maarten.jpg" alt=""></a></figure> 
         </div>
-					<div class="social-box">                            
-						<ul class="social-links social-icon-colored">
-							   <li><a href="https://twitter.com/ageofproduct"><i class="fab fa-twitter"></i></a></li>
-                               <li><a href="https://www.linkedin.com/in/stefanwolpers/"><i class="fab fa-linkedin"></i></a></li>
-							   <li><a href="https://berlin-product-people.com/"><i class="fab fa fa-globe"></i></a></li>
-							   <li><a href="https://age-of-product.com/"><i class="fab fa fa-blog"></i></a></li>
-                        </ul>
-				</div>
+
 			   </div>
               </div>
 
