--- a/index.html
+++ b/index.html
@@ -648,7 +648,7 @@
 								
 								<li class="true">Inclusive All Taxes</li>
 
-                                <li class="true">Recorded Sessions</li>
+                                <li class="true">Recorded Sessions (Post Conference)</li>
 
                                 <li class="true">8 PDUs and 8 SEUs</li>
 
@@ -693,7 +693,7 @@
 								
 								<li class="true">Inclusive All Taxes</li>
 
-                                <li class="true">Recorded Sessions</li>
+                                <li class="true">Recorded Sessions (Post Conference)</li>
 
                                 <li class="true">8 PDUs and 8 SEUs</li>
 
