--- a/buy-ticket.html
+++ b/buy-ticket.html
@@ -248,7 +248,7 @@
 								
 								<li class="true">Inclusive All Taxes</li>
 
-                                <li class="true">Recorded Sessions</li>
+                                <li class="true">Recorded Sessions (Post Conference)</li>
 
                                 <li class="true">8 PDUs and 8 SEUs</li>
 
@@ -293,7 +293,7 @@
 								
 								<li class="true">Inclusive All Taxes</li>
 
-                                <li class="true">Recorded Sessions</li>
+                                <li class="true">Recorded Sessions (Post Conference)</li>
 
                                 <li class="true">8 PDUs and 8 SEUs</li>
 
