--- a/maarten-dalmijin.html
+++ b/maarten-dalmijin.html
@@ -208,11 +208,11 @@
 							<p>Maarten is currently writing a book on Sprint Goals for the Mike Cohn signature series to be published by Addison Wesley.</p>
 							<h4>Sessions by Maarten</h4>
                             <div class="row">
-                                <div class="col-lg-4">
+                                <div class="col-lg-8">
                                     <div class="speaker-session-info">
                                         <h5>June 19, 2021</h5>
-                                        <span> Will be updated soon </span>
-                                        <p> Will be updated soon </p>
+                                        <span> Track 3: 03:15PM IST </span>
+                                        <p> Topic: <b>Delivering on time is overrated</b></p>
                                     </div>
                                 </div>
 
