--- a/speakers.html
+++ b/speakers.html
@@ -321,8 +321,14 @@
 						</div>
 					<div class="info-box">
 						<h4 class="name"><a href="stefan-wolpers.html">Maarten Dalmijin</a></h4>
-                           
-                        </div>
+						<span class="designation">Senior Product Owner<br>Rodeo</span>
+                          </div>
+						<div class="social-box">                            
+						<ul class="social-links social-icon-colored">
+                               <li><a href="https://www.linkedin.com/in/maarten-dalmijn/"><i class="fab fa-linkedin"></i></a></li>
+							   <li><a href="https://maartendalmijn.com"><i class="fab fa fa-globe"></i></a></li>
+                        </ul>
+				</div>
 
 			   </div>
               </div>
