--- a/sponsors.html
+++ b/sponsors.html
@@ -208,9 +208,7 @@
 
                 <h2>Proud Sponsors</h2>
 
-            </div> 
-
-
+            </div>
 
             <div class="sponsors-outer text-center">
 
@@ -218,20 +216,19 @@
 
                 <div class="row">
 
-                  <!-- Client Block -->
+<!-- Client Block -->
 
                     <div class="client-block col-lg-3 col-md-6 col-sm-12">
 
-                        <figure class="image-box"><a href="#"><img src="images/clients/1.png" alt=""></a></figure>
+                        <figure class="image-box"><a href="https://xebia.com/"><img src="images/clients/1.png" alt=""></a></figure>
 
                     </div>
 
-  
+<!-- Client End -->
 
                 </div>
 
             </div>
-
 
 
             <div class="sponsors-outer text-center">
@@ -242,17 +239,45 @@
 
                 <div class="row">
 
-                   <!-- Client Block -->
+<!-- Client Block -->
 
                     <div class="client-block col-lg-3 col-md-6 col-sm-12">
 
-                        <figure class="image-box"><a href="#"><img src="images/clients/2.png" alt=""></a></figure>
+                        <figure class="image-box"><a href="https://www.xebiaacademyglobal.com/"><img src="images/clients/2.png" alt=""></a></figure>
+
+                    </div>
+
+<!-- Client Block End-->
 
               </div>
 
             </div>
+			
+			
+			
+			            <div class="sponsors-outer text-center">
 
-           </div>
+                <h3>Knowledge Partner</h3>
+
+
+
+                <div class="row">
+
+<!-- Client Block -->
+
+                    <div class="client-block col-lg-3 col-md-6 col-sm-12">
+
+                        <figure class="image-box"><a href="https://enterpriseagility.university/x"><img src="images/clients/3.jpg" alt=""></a></figure>
+
+                    </div>
+
+<!-- Client Block End-->
+
+              </div>
+
+            </div>
+			
+			
 
          </div>
 
