--- a/index.html
+++ b/index.html
@@ -868,7 +868,7 @@
 
                     <div class="client-block col-lg-3 col-md-6 col-sm-12">
 
-                        <figure class="image-box"><a href="#"><img src="images/clients/1.png" alt=""></a></figure>
+                        <figure class="image-box"><a href="https://xebia.com/"><img src="images/clients/1.png" alt=""></a></figure>
 
                     </div>
 
@@ -877,7 +877,6 @@
                 </div>
 
             </div>
-
 
 
             <div class="sponsors-outer text-center">
@@ -892,7 +891,7 @@
 
                     <div class="client-block col-lg-3 col-md-6 col-sm-12">
 
-                        <figure class="image-box"><a href="#"><img src="images/clients/2.png" alt=""></a></figure>
+                        <figure class="image-box"><a href="https://www.xebiaacademyglobal.com/"><img src="images/clients/2.png" alt=""></a></figure>
 
                     </div>
 
@@ -901,6 +900,32 @@
               </div>
 
             </div>
+			
+			
+			
+			            <div class="sponsors-outer text-center">
+
+                <h3>Knowledge Partner</h3>
+
+
+
+                <div class="row">
+
+<!-- Client Block -->
+
+                    <div class="client-block col-lg-3 col-md-6 col-sm-12">
+
+                        <figure class="image-box"><a href="https://enterpriseagility.university/x"><img src="images/clients/3.jpg" alt=""></a></figure>
+
+                    </div>
+
+<!-- Client Block End-->
+
+              </div>
+
+            </div>
+			
+			
 
          </div>
 
