--- a/index.html
+++ b/index.html
@@ -868,7 +868,7 @@
 
                     <div class="client-block col-lg-3 col-md-6 col-sm-12">
 
-                        <figure class="image-box"><a href="https://xebia.com/"><img src="images/clients/1.png" alt=""></a></figure>
+                        <figure class="image-box"><a href="https://xebia.com/" target="blank"><img src="images/clients/1.png" alt=""></a></figure>
 
                     </div>
 
@@ -891,7 +891,7 @@
 
                     <div class="client-block col-lg-3 col-md-6 col-sm-12">
 
-                        <figure class="image-box"><a href="https://www.xebiaacademyglobal.com/"><img src="images/clients/2.png" alt=""></a></figure>
+                        <figure class="image-box"><a href="https://www.xebiaacademyglobal.com/" target="blank"><img src="images/clients/2.png" alt=""></a></figure>
 
                     </div>
 
@@ -915,7 +915,7 @@
 
                     <div class="client-block col-lg-3 col-md-6 col-sm-12">
 
-                        <figure class="image-box"><a href="https://enterpriseagility.university/x"><img src="images/clients/3.jpg" alt=""></a></figure>
+                        <figure class="image-box"><a href="https://enterpriseagility.university/" target="blank"><img src="images/clients/3.jpg" alt=""></a></figure>
 
                     </div>
 
