--- a/sponsors.html
+++ b/sponsors.html
@@ -267,7 +267,7 @@
 
                     <div class="client-block col-lg-3 col-md-6 col-sm-12">
 
-                        <figure class="image-box"><a href="https://enterpriseagility.university/x"><img src="images/clients/3.jpg" alt=""></a></figure>
+                        <figure class="image-box"><a href="https://enterpriseagility.university/"><img src="images/clients/3.jpg" style="padding-top: 15px; padding-bottom: 15px;" alt=""></a></figure>
 
                     </div>
 
