--- a/index.html
+++ b/index.html
@@ -915,7 +915,7 @@
 
                     <div class="client-block col-lg-3 col-md-6 col-sm-12">
 
-                        <figure class="image-box"><a href="https://enterpriseagility.university/" target="blank"><img src="images/clients/3.jpg" alt=""></a></figure>
+                        <figure class="image-box"><a href="https://enterpriseagility.university/" target="blank"><img src="images/clients/3.jpg" style="padding-top: 15px; padding-bottom: 15px;" alt=""></a></figure>
 
                     </div>
 
