--- a/sonya-siderova.html
+++ b/sonya-siderova.html
@@ -180,7 +180,7 @@
 
     <section class="page-title" style="background-image:url(images/main-slider/scrum-pages-2.png);">
         <div class="auto-container">
-            <h1>Chris Lukassen</h1>
+            <h1>Sonya Siderova</h1>
             <ul class="bread-crumb clearfix">
                 <li><a href="index.html">Home</a></li>
                 <li><a href="speakers.html">Speakers</a></li>
@@ -195,11 +195,12 @@
             <div class="row">
                 <div class="image-column col-lg-4 col-md-12 col-sm-12">
                     <div class="image-box">
-                        <figure class="image"><img src="images/speaker/speaker-1.jpg" alt=""></figure>
+                        <figure class="image"><img src="images/speaker/Sonya.jpg" alt=""></figure>
                         <ul class="social-icon-two social-icon-colored text-center">
 
-								<li><a href="https://twitter.com/productsamurai"><i class="fab fa-twitter"></i></a></li>
-                                <li><a href="https://www.linkedin.com/in/chrislukassen/"><i class="fab fa-linkedin"></i></a></li>
+							   <li><a href="https://www.linkedin.com/in/siderova/"><i class="fab fa-linkedin"></i></a></li>
+							   <li><a href="https://twitter.com/SonyaSiderova"><i class="fab fa-twitter"></i></a></li>
+							   <li><a href="https://getnave.com/"><i class="fab fa fa-globe"></i></a></li>
                             
                         </ul>
                     </div>
@@ -208,18 +209,15 @@
                 <div class="info-column col-lg-8 col-md-12 col-sm-12">
                     <div class="inner-column">
                         <div class="text-box">
-                            <h3>Chris Lukassen</h3>
-                            <p>Award-winning product manager, seasoned martial arts practitioner, and author of the informative how-to-business book, The Product Samurai, Chris Lukassen is on a mission to radically change the way people create products. <br><br>
-							Chris has coached hundreds of product managers, product owners, and C-level professionals to transform their companies into Scrum organizations. Drawing on his extensive experience with various startups and enterprises like Thales, Saab, TomTom, he bridges the technical world with the commercial world and has helped revolutionize the way products and services are innovated.<br><br>
-							A regular blogger and contributor to Quora, Chris also speaks at Microsoft TechDays and other agile-focused conferences and user groups across the Netherlands, Eastern-Europe, and Asia.<br><br>
-							As a passionate martial arts practitioner, he weaves the concepts of flow, balance, leverage, and courage into his product owner training and writing. He currently lives in Apeldoorn with his four children and loving wife, who coach him daily in the servant part of leadership.</p>
-                            <h4>Sessions by Chris</h4>
+                            <h3>Sonya Siderova</h3>
+                            <p>As an accomplished Change Agent, Sonya knows how to mobilize people to inspire cross-organizational transformation that results in improved flow efficiency and reduced delivery times. She is a strong advocate of data-driven decision making where teams rely on numbers, not guesswork, to accurately predict product outcomes. Sonya is also the Founder and CEO at Nave, an analytical suite that helps teams optimize their workflows and deliver value to their customers quickly and efficiently. Today, teams spanning across many industries have become more productive, self-managed and excited about their work, and Nave helped them get there.</p>
+                            <h4>Sessions by Sonya</h4>
                             <div class="row">
-                                <div class="col-lg-4">
+                                <div class="col-lg-8">
                                     <div class="speaker-session-info">
                                         <h5>June 19, 2021</h5>
-                                        <span> Will be updated soon </span>
-                                        <p> Will be updated soon </p>
+                                       <span> Track 2: 6:15 PM IST </span>
+                                      <p> Topic: <b>The 3-Step Product Management Guide: How to Set and Manage Realistic Goals Using Your Past Performance Data</b></p>
                                     </div>
                                 </div>
 
