--- a/gunther-verheyen.html
+++ b/gunther-verheyen.html
@@ -217,11 +217,11 @@
 							When not travelling for Scrum and humanizing the workplace, Gunther lives and works in Antwerp, Belgium. More at https://guntherverheyen.com/about</p>
                             <h4>Sessions by Gunther</h4>
 							<div class="row">
-                                <div class="col-lg-4">
+                                <div class="col-lg-8">
                                     <div class="speaker-session-info">
                                         <h5>June 19, 2021</h5>
-                                        <span> Will be updated soon </span>
-                                        <p> Will be updated soon </p>
+                                       <span> Keynote Address: 2:15 PM IST </span>
+                                      <p> Topic: <b>Welcome Keynote Address</b></p>
                                     </div>
                                 </div>
 
