--- a/chandan-patary.html
+++ b/chandan-patary.html
@@ -232,11 +232,11 @@
 							</p>
                             <h4>Sessions by Chandan</h4>
                             <div class="row">
-                                <div class="col-lg-4">
+                                <div class="col-lg-8">
                                     <div class="speaker-session-info">
                                         <h5>June 19, 2021</h5>
-                                        <span> Will be updated soon </span>
-                                        <p> Will be updated soon </p>
+                                       <span> Track 2: 4:15 PM IST </span>
+                                      <p> Topic: <b>Descaling Organizational Complexity to Expedite Product Delivery</b></p>
                                     </div>
                                 </div>
 
