--- a/stefan-wolpers.html
+++ b/stefan-wolpers.html
@@ -217,11 +217,11 @@
 							<p>WHAT MAKES ME DIFFERENT: 10+ years of software development experience based on agile frameworks have taught me a lot of the best practices for effective agile transitions. I have also learned—often the hard way—what is not working. Creating in your organization a culture that embraces learning and experimentation to build product customers love hence does not require to reinvent the proverbial wheel.</p>
                             <h4>Sessions by Stefan</h4>
 							<div class="row">
-                                <div class="col-lg-4">
+                                <div class="col-lg-8">
                                     <div class="speaker-session-info">
                                         <h5>June 19, 2021</h5>
-                                        <span> Will be updated soon </span>
-                                        <p> Will be updated soon </p>
+                                       <span> Track 1: 4:15 PM IST </span>
+                                      <p> Topic: <b>Agile Metrics Survey — The Good, the Bad, and the Unknown</b></p>
                                     </div>
                                 </div>
 
