--- a/patricia-kong.html
+++ b/patricia-kong.html
@@ -212,7 +212,7 @@
                                     <div class="speaker-session-info">
                                         <h5>June 19, 2021</h5>
                                         <span> Closing Note: 08:15PM IST </span>
-                                        <p> Topic: <b>Closing Note</b></p>
+                                        <p> Topic: <b>Measuring what Matters - What Success Looks Like for Agile Organizations</b></p>
                                     </div>
                                 </div>
 
