--- a/schedule.html
+++ b/schedule.html
@@ -288,6 +288,12 @@
                                             <h5 class="name">Padma Satyamurthy</h5>
 											
 											<span class="designation">Enterprise Transformation Leader <br> Walmart Labs</span>
+											<h4><a href="schedule.html">Tying the metrics with business impact</a></h4>
+											<div class="text">Every organization is focused on creating an impact and finding the fastest route to make a business impact for their customers. It then becomes critical to answer questions like 1) What is business value? 2) How do we know the impact on the customer? 3) Do we know this was the right time to deliver this value to customer? 4) Have we prioritized our backlog according to the business value? And so on… <br><br>
+											To answer these questions, the organization needs to explore on “How can we measure this?” And back up this with “Are we using right metrics for our measurements?”<br><br>
+											This presentation is going to focus on what metrics helps organizations to see true value impact, identify improvements to ensure value streams are flowing seamlessly and also few common metrics which are not essentially metrics at all ! <br><br>
+											And also touch upon, how can we scale these practices at organization level. 
+											</div>
 
                                         </div>
 
@@ -424,6 +430,8 @@
                                             <h5 class="name">Chris Lukassen</h5>
 											
 											<span class="designation">Head of Product<br>Xebia Academy</span>
+											<h4><a href="schedule.html">A battle-plan for your first 30 days as a Product Owner.</a></h4>
+											<div class="text">Getting a good start is paramount for having success off in your role. But what can you do? The Scrum guide doesn’t provide concrete help other than inspect and adapt, but what to inspect? What to adapt? How to discover what is expected of you? In this fun and practical session we will go through a playbook for a great start.</div>
 
                                         </div>
 									</div>					
