Updated the get in touch with google sheets

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 
 <!-- Main Header-->
     
-	<header class="main-header header-style-two">
+	<header class="main-header header-style-two" data-component="Header">
         <div class="main-box">
             <div class="auto-container clearfix" >
                 <div class="logo-box">
@@ -68,7 +68,7 @@
 
 <!-- Main Menu -->
 
-        <nav class="main-menu navbar-expand-md navbar-light">
+        <nav class="main-menu navbar-expand-md navbar-light" data-component="Nav">
         <div class="navbar-header">
         
 <!-- Togg le Button -->      
