Revamped Checkout process & Bug Fixes

--- a/buy-ticket.html
+++ b/buy-ticket.html
@@ -258,7 +258,7 @@
 
                             <div class="btn-box">
 
-                                <a href="http://bit.ly/sdbindiaeb" class="theme-btn btn-style-one"><span class="btn-title">BUY TICKETS</span></a>
+                                <a href="checkout.html" class="theme-btn btn-style-one"><span class="btn-title">BUY TICKETS</span></a>
 
                             </div>
 
