--- a/index.html
+++ b/index.html
@@ -437,7 +437,7 @@
                                     <li class="true">Participation Certificate</li>
                                 </ul>
                                 <div class="btn-box">
-                                    <a href="http://bit.ly/sdbindiaeb" class="theme-btn btn-style-one"><span
+                                    <a href="checkout.html" class="theme-btn btn-style-one"><span
                                             class="btn-title">BUY TICKETS</span></a>
                                 </div>
                             </div>
