--- a/schedule.html
+++ b/schedule.html
@@ -134,7 +134,7 @@
                     <h2>Conference Schedule</h2>
                     <br><br>
                 </div>
-                <!---->
+                <!--Accordian Schedule-->
                 <div class="col-12 col-md-9 mx-auto p-0">
                     <div id="accordion" class="py-5">                        
                         <div class="card border-0">
@@ -150,7 +150,7 @@
                                                     </span>
                                                 </div>
                                                 <div>
-                                                    <span style="font-size: 18px;font-style: italic;">
+                                                    <span style="font-size: 16px;font-style: italic;">
                                                         Saturday June 19, 2021
                                                     </span>
                                                 </div>
@@ -189,7 +189,7 @@
                                                 </span>
                                             </div>
                                             <div>
-                                                <span style="font-size: 18px;font-style: italic;">
+                                                <span style="font-size: 16px;font-style: italic;">
                                                     Saturday June 19, 2021
                                                 </span>
                                             </div>
@@ -232,7 +232,7 @@
                                                     </span>
                                                 </div>
                                                 <div>
-                                                    <span style="font-size: 18px;font-style: italic;">
+                                                    <span style="font-size: 16px;font-style: italic;">
                                                         Saturday June 19, 2021
                                                     </span>
                                                 </div>
@@ -349,7 +349,7 @@
                                                 </span>
                                             </div>
                                             <div>
-                                                <span style="font-size: 18px;font-style: italic;">
+                                                <span style="font-size: 16px;font-style: italic;">
                                                     Saturday June 19, 2021
                                                 </span>
                                             </div>
@@ -458,7 +458,7 @@
                                                 </span>
                                             </div>
                                             <div>
-                                                <span style="font-size: 18px;font-style: italic;">
+                                                <span style="font-size: 16px;font-style: italic;">
                                                     Saturday June 19, 2021
                                                 </span>
                                             </div>
@@ -514,7 +514,7 @@
                                                 </span>
                                             </div>
                                             <div>
-                                                <span style="font-size: 18px;font-style: italic;">
+                                                <span style="font-size: 16px;font-style: italic;">
                                                     Saturday June 19, 2021
                                                 </span>
                                             </div>
