--- a/speakers.html
+++ b/speakers.html
@@ -112,7 +112,7 @@
 
                                 </li>
 
-                                <li><a href="contact">Contact</a></li>
+                                <li class="dropdown"><a href="contact.html">Contact</a></li>
 
                             </ul>
 
