fix scroll menu transparent color

--- a/contact.html
+++ b/contact.html
@@ -16,6 +16,7 @@
     <link href="css/bootstrap.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
     <link href="css/responsive.css" rel="stylesheet">
+    <link href="css/accordian.css" rel="stylesheet">
     <!--Color Switcher Mockup-->
     <link href="css/color-switcher-design.css" rel="stylesheet">
     <link rel="shortcut icon" href="images/favicon.png" type="image/x-icon">
@@ -64,7 +65,8 @@
                                         <ul>
                                             <li><a href="https://agilencr.org/" target="blank">Agile NCR 2021</a></li>
                                             <li><a href="https://www.rsgpune.org/" target="blank">Regional Scrum
-                                                    Gathering Pune</a></li>
+                                                    Gathering Pune</a>
+                                            </li>
                                         </ul>
                                     </li>
                                     <li class="current dropdown"><a href="contact.html">Contact</a></li>
@@ -97,7 +99,7 @@
             </div>
             <!-- End Mobile Menu -->
         </header>
-        <!--End Main Header -->
+        <!--End Main Header -->        
         <!--Page Title-->
         <section class="page-title" style="background-image:url(images/main-slider/scrum-pages-2.png);">
             <div class="auto-container">
@@ -144,7 +146,7 @@
                                 <div class="sec-title">
                                     <h2>Get in Touch</h2>
                                 </div>
-                                <form method="post" autocomplete="off" name="google-sheet" id="contact-form">
+                                <form method="post" autocomplete="off" name="google-sheet" id="contact-form1">
                                     <div class="row clearfix">
                                         <div class="col-lg-6 col-md-6 col-sm-12 form-group">
                                             <input type="text" name="Name" placeholder="Name" class="form-control"
@@ -182,7 +184,8 @@
                                 .catch(error => console.error('Error!', error.message))
                         })
                     </script>
-                    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>                    
+                    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
+                    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
                 </div>
             </div>
         </section>
@@ -318,6 +321,31 @@
     </div>
     <!--End pagewrapper-->
     <!--Search Popup-->
+    <div id="search-popup" class="search-popup">
+        <div class="close-search theme-btn"><span class="fas fa-window-close"></span></div>
+        <div class="popup-inner">
+            <div class="overlay-layer"></div>
+            <div class="search-form">
+                <form method="post" action="https://www.google.com/">
+                    <div class="form-group">
+                        <fieldset>
+                            <input type="search" class="form-control" name="search-input" value=""
+                                placeholder="Search Here" required>
+                            <input type="submit" value="Search Now!" class="theme-btn">
+                        </fieldset>
+                    </div>
+                </form>
+                <br>
+                <h3>Recent Search Keywords</h3>
+                <ul class="recent-searches">
+                    <li><a href="https://agilencr.org/">AgileNCR</a></li>
+                    <li><a href="https://rsgpune.org">Regional Scrum Gathering</a></li>
+                    <li><a href="https://xebia.com/">Xebia</a></li>
+                    <li><a href="#">Digital</a></li>
+                    <li><a href="https://www.scrumdaybangalore.org/">Conference</a></li>
+                </ul>
+            </div>
+        </div>
     </div>
     <!--Scroll to top-->
     <div class="scroll-to-top scroll-to-target" data-target="html"><span class="fa fa-angle-double-up"></span></div>
