--- a/index.html
+++ b/index.html
@@ -466,9 +466,7 @@
                                             <noscript>
                                                 <a href="https://scrumdaybangalore2021.eventbrite.com"
                                                     rel="noopener noreferrer" target="_blank"></noscript>
-                                            <button id="eventbrite-widget-modal-trigger-140073179651" type="button"
-                                                style=" background: #ec167f; color: white; border: 0;">BUY
-                                                TICKETS</button>
+                                                <span class="btn-title" id="eventbrite-widget-modal-trigger-140073179651" >BUY TICKETS</span>
                                             <script
                                                 src="https://www.eventbrite.com/static/widgets/eb_widgets.js"></script>
                                             <script type="text/javascript">
