--- a/buy-ticket.html
+++ b/buy-ticket.html
@@ -305,7 +305,7 @@
 
                                 <a href="#" class="theme-btn btn-style-one"><span class="btn-title"><!-- Noscript content for added SEO -->
 								<noscript><a href="https://scrumdaybangalore2021.eventbrite.com" rel="noopener noreferrer" target="_blank"></noscript>
-								<button id="eventbrite-widget-modal-trigger-140073179651" type="button" style=" background: #ec167f; color: white; border: 0;" >BUY TICKETS</button>
+								<span class="btn-title" id="eventbrite-widget-modal-trigger-140073179651" >BUY TICKETS</span>
 								<script src="https://www.eventbrite.com/static/widgets/eb_widgets.js"></script>
 <script type="text/javascript">
     var exampleCallback = function() {
