--- a/checkout.html
+++ b/checkout.html
@@ -142,13 +142,22 @@
                 <h3 style="text-align: center;margin:20px 10px;font-family: Arial;">EARLY BIRD REGISTRATION</h3>
               </div>              
               <label for="fname"><i class="fa fa-user"></i> Full Name</label>
-              <input type="text" id="fname" name="name" placeholder="Name">
+              <input type="text" id="fname" name="name" placeholder="Name" required="">
+
               <label for="email"><i class="fa fa-envelope"></i> Email</label>
-              <input type="text" id="email" name="email" placeholder="Email Address">
+              <input type="text" id="email" name="email" placeholder="Email Address" required="">
+
               <label for="city"><i class="fa fa-mobile"></i> Mobile</label>
-              <input type="text" id="city" name="mobile" placeholder="Mobile Number">
-              <label for="adr"><i class="fa fa-address-card-o"></i> Address</label>
-              <input type="text" id="adr" name="address" placeholder="Address">
+              <input type="text" id="city" name="mobile" placeholder="Mobile Number" required="">
+
+              <label for="organization"><i class="fa fa-organization"></i> Organization</label>
+              <input type="text" id="organization" name="organization" placeholder="Organization" required="">
+
+              <label for="designation"><i class="fa fa-designation"></i> Designation</label>
+              <input type="text" id="designation" name="designation" placeholder="Designation" required="">
+
+              <label for="adr"><i class="fa fa-address-card-o"></i> Location</label>
+              <input type="text" id="adr" name="location" placeholder="Location" required="">
               <input type="submit" value="Pay Now" class="btn">
             </div>
         </form>
@@ -156,13 +165,13 @@
     </div>
   </div>
   <script>
-    const scriptURL = 'https://script.google.com/macros/s/AKfycbxm5qM7OdtGv-FVBd0sJ8OJBqMWHO30yj1hXgq1LgkdKjEi7x8oYMRSuHvOZ1_YFcEuYg/exec'
+    const scriptURL = 'https://script.google.com/macros/s/AKfycbyP-giYT6shxHjyizRzbIJkXzJ-ZWBSo5FxL-zbi-N5f-SoV8UtScFHmyjj_DmtKHM2/exec'
     const form = document.forms['google-sheet']
 
     form.addEventListener('submit', e => {
       e.preventDefault()
       fetch(scriptURL, { method: 'POST', body: new FormData(form) })
-        .then(response => window.location.replace("payscript.html"))
+        .then(response => window.location.replace("https://razorpay.com/payment-button/pl_GZwPv2T6cSr9yc/view/?utm_source=payment_button&utm_medium=button&utm_campaign=payment_button"))
         .catch(error => console.error('Error!', error.message))
     })
   </script>
