--- a/index.html
+++ b/index.html
@@ -401,6 +401,26 @@
                             </div>
                         </div>
                     </div>
+
+
+                    <!-- Speaker Block -->
+                    <div class="speaker-block-two col-xl-3 col-lg-4 col-md-6 col-sm-12 wow fadeInUp">
+                        <div class="inner-box">
+                            <div class="info-box">
+                                <h4 class="name"><a href="speakers/Banu-Prakash">M S Banu Prakash Raje Urs</a></h4>
+                                <span class="designation">Agile Coach<br>SocGen</span>
+                            </div>
+                            <div class="image-box">
+                                <figure class="image"><a href="banu-prakash.html"><img
+                                            src="images/speaker/bhanu.jpg" alt=""></a></figure>
+                            </div>
+                            <div class="social-box">
+                                <ul class="social-links social-icon-colored">
+
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
                     <!-- Add New Speaker Here -->
                 </div>
             </div>
