--- a/index.html
+++ b/index.html
@@ -435,22 +435,21 @@
             <div class="auto-container">
                 <div class="sec-title text-center">
                     <span class="title">Buy Tickets</span>
-                    <h2>Select your Early Bird Ticket (Max - 50)</h2>
+                    <h2>Select your Ticket</h2>
                 </div>
                 <div class="outer-box">
                     <div class="row">
                         <!-- Pricing Block -->
                         <div class="pricing-block-two col-lg-6 col-md-12 col-sm-12">
                             <div class="inner-box">
-                                <div class="title"><span class="icon flaticon-movie-tickets"></span> Early Bird</div>
+                                <div class="title"><span class="icon flaticon-movie-tickets"></span> REGULAR FEE</div>
                                 <div class="price-box">
                                     <h6 class="price">Indian Delegates </h6>
                                 </div>
                                 <div class="price-box">
-                                    <h4 class="price">₹ 550</h4>
+                                    <h4 class="price">₹ 750</h4>
                                 </div>
                                 <ul class="features">
-                                    <li class="true">Valid Till May 15, 2021</li>
                                     <li class="true">Inclusive All Taxes</li>
                                     <li class="true">Recorded Sessions (Post Conference)</li>
                                     <li class="true">8 PDUs and 8 SEUs</li>
@@ -465,15 +464,14 @@
                         <!-- Pricing Block -->
                         <div class="pricing-block-two col-lg-4 col-md-6 col-sm-12 wow fadeInUp" data-wow-delay="400ms">
                             <div class="inner-box">
-                                <div class="title"><span class="icon flaticon-movie-tickets"></span> EARLY BIRD</div>
+                                <div class="title"><span class="icon flaticon-movie-tickets"></span> REGULAR FEE</div>
                                 <div class="price-box">
                                     <h6 class="price">International Delegates</h6>
                                 </div>
                                 <div class="price-box">
-                                    <h4 class="price">$ 9.99</h4>
+                                    <h4 class="price">$ 14.99</h4>
                                 </div>
                                 <ul class="features">
-                                    <li class="true">Valid Till May 15, 2021</li>
                                     <li class="true">Inclusive All Taxes</li>
                                     <li class="true">Recorded Sessions (Post Conference)</li>
                                     <li class="true">8 PDUs and 8 SEUs</li>
