Free Delegate Page Addition

--- a/index.html
+++ b/index.html
@@ -947,7 +947,7 @@
             </section>
             <!-- End Why Choose Us -->
             <!--Clients Section-->
-            <section class="clients-section">
+            <section class="clients-section justify-content-center">
                 <div class="anim-icons">
                     <span class="icon icon-dots-3 wow zoomIn"></span>
                     <span class="icon icon-circle-blue wow zoomIn"></span>
