--- a/checkout.html
+++ b/checkout.html
@@ -138,8 +138,8 @@
           <div class="">
             <div class="col-12">
               <div>
-                <a style="cursor: pointer;" href="index.html" class="fa fa-arrow-left" aria-hidden="true">&nbsp;&nbsp;Back</a>
-                <h3 style="text-align: center;margin:20px 10px;font-family: Arial;">EARLY BIRD REGISTRATION</h3>
+                <a style="cursor: pointer; font-family: Arial;" href="index.html" class="fa fa-arrow-left" aria-hidden="true">&nbsp;&nbsp;Back</a>
+                <h3 style="text-align: center;margin:20px 10px;font-family: Arial;">REGISTRATION FORM</h3>
               </div>              
               <label for="fname"><i class="fa fa-user"></i> Full Name</label>
               <input type="text" id="fname" name="name" placeholder="Name" required="">
