--- a/index.html
+++ b/index.html
@@ -313,7 +313,7 @@
                         <div class="inner-box">
                             <div class="info-box">
                                 <h4 class="name"><a href="speakers/maarten-dalmijin">Maarten Dalmijin</a></h4>
-                                <span class="designation">Senior Product Owner<br>Rodeo</span>
+                                <span class="designation">Head of Product <br>Rodeo</span>
                             </div>
                             <div class="image-box">
                                 <figure class="image"><a href="maarten-dalmijin.html"target="blank"><img
