--- a/banu-prakash.html
+++ b/banu-prakash.html
@@ -198,9 +198,9 @@
                         <figure class="image"><img src="images/speaker/bhanu.jpg" alt=""></figure>
                         <ul class="social-icon-two social-icon-colored text-center">
 
-								<li><a href="https://twitter.com/productsamurai"><i class="fab fa-twitter"></i></a></li>
-                                <li><a href="https://www.linkedin.com/in/chrislukassen/"><i class="fab fa-linkedin"></i></a></li>
-                            
+                            <li><a href="https://www.linkedin.com/in/banuprakashurs/" target="blank"><i class="fab fa-linkedin"></i></a></li>
+                            <li><a href="https://twitter.com/banuprakash_urs" target="blank"><i class="fab fa-twitter"></i></a></li>
+                                       
                         </ul>
                     </div>
                 </div>
