--- a/index.html
+++ b/index.html
@@ -438,7 +438,7 @@
                                                 </div>
                                                 <div class="image-box">
                                                     <figure class="image"><a href="erich-buhler.html"target="blank"><img
-                                                                src="images/speaker/bhan.jpg" alt=""></a></figure>
+                                                                src="images/speaker/Erich R.jpg" alt=""></a></figure>
                                                 </div>
                                                 <div class="social-box">
                                                     <ul class="social-links social-icon-colored">
@@ -930,12 +930,12 @@
                                                     
                                                     <div class="date">04:15 PM - 05:00 PM</div>
                                                     <div class="speaker-info">
-                                                        <figure class="thumb"><img src="images/speaker/xxxx.jpg"
+                                                        <figure class="thumb"><img src="images/speaker/Erich R.jpg"
                                                                 alt="">
                                                         </figure>
                                                         <h5 class="name">Erich Buhler</h5>
-                                                        <span class="designation">XXXXXX<br>XXXXX</span>
-                                                        <h4><a href="schedule.html">XXXXXXXXXXXXXXXXXXXXXXX</a>
+                                                        <span class="designation">Founder and Director <br>Enterprise Agility University</span>
+                                                        <h4><a href="schedule.html">Going beyond agile during turbulent times with Enterprise Agility</a>
                                                         </h4>
                                                     </div>
                                                 </div>
